# assimp_android_native_activity

./: .gitignore  README
assimp_port_android/assimp/code/: ColladaLoader.cpp  ColladaParser.cpp  DefaultLogger.cpp
assimp_port_android/assimp/include/assimp/: NullLogger.hpp
blender/: hud_template.blend  object_template.blend
engine/engine/app/: build.gradle
engine/engine/app/src/main/: AndroidManifest.xml
engine/engine/app/src/main/assets/: 0000-0100.avi  0001-0010.avi  box.dae  flashFragment.fs  flashVertex.vs  hudFragment.fs  hudVertex.vs  lense.tga  main_shader.fs  main_shader.vs  mech0.dae  mech0_animated.dae  mech1_animated.dae  mech1_animated.fbx  mech1_animated.mtl  menu.dae  monkey.dae  scene0.dae  scene0_001.dae  scene0_002.dae  scene0_003.dae  skinning2.fs  skinning2.vs  skybox.fs  skybox.vs  static.fs  static.vs  textFragment.fs  textVertex.vs  untitled.dae  untitled2.dae  v_hands_gloves_sf2 d.tga.001.tga
engine/engine/app/src/main/cpp/: CMakeLists.txt
engine/engine/app/src/main/cpp/FreeGlut/: fg_callbacks.c  fg_ext_android.c  fg_font_data.c  fg_init_android.c  fg_main_android.c  fg_runtime_android.c  fg_window_android.c
engine/engine/app/src/main/cpp/MagickCore/: animate.c  blob.c  configure.c  constitute.c  delegate.c  nt-base.c  property.c  string.c  utility.c  version.c  widget.c
engine/engine/app/src/main/cpp/app/: AppCamera.cpp  AppCamera.h  BaseCamera.cpp  Config.cpp  Config.h  H264_Decoder.cpp  H264_Decoder.h  HUD.cpp  HUD.h  OCTree.cpp  OCTree.h  PipelineHelper.cpp  Player.cpp  Player.h  PluginManager.cpp  PluginManager.h  YUV420P_Player.cpp  YUV420P_Player.h  android_native_app_glue.c  android_native_app_glue.h  app.cpp  app.h  app_mesh.cpp  app_mesh.h  app_technique.cpp  app_technique.h  audio_plugin.cpp  audio_plugin.h  camera.cpp  cubemap_texture.cpp  defaultKeyHandler.cpp  engine.h  gl3stub.h  gles_stubs.c  glut_backend.cpp  helloworld.cpp  helloworld.h  lighting_technique.h  main.cpp  mesh.cpp  (+28 more)
engine/engine/app/src/main/cpp/assimp/: AndroidJNIIOSystem.cpp  ColladaLoader.cpp  DefaultLogger.cpp  Importer.cpp  ioapi.c  irrXML.cpp
engine/engine/app/src/main/cpp/coders/: png.c  wpg.c
engine/engine/app/src/main/cpp/magickwand/: magick-image.c  script-token.c
engine/engine/app/src/main/cpp/meshes/: AppMesh.cpp  AppMesh.h  BaseMesh.cpp  BaseMesh.h  BasicMesh.cpp  BasicMesh.h
engine/engine/app/src/main/cpp/ogldev/: ogldev_app.cpp  ogldev_app.h  ogldev_camera.h  ogldev_cubemap_texture.h  ogldev_math_3d.h  ogldev_texture.cpp  ogldev_texture.h  ogldev_util.cpp  ogldev_util.h  xparsegeometry_repl.c
engine/engine/app/src/main/cpp/plugins/: AudioPlugin.cpp  AudioPlugin.h  BackMusic.h  CrossHair.h  DemoPlugin.cpp  DemoPlugin.h  FireSoundPlugin.h  FlashEffect.cpp  FlashEffect.h  GamePlugin.cpp  GamePlugin.h  H264Decoder.cpp  H264Decoder.h  HUDPlugin.cpp  HUDPlugin.h  InteractivePlugin.cpp  InteractivePlugin.h  MechAttackEffect.h  MechAttackSoundPlugin.h  MechPlugin.h  MuzzleEffect.h  PlayerPlugin.cpp  PlayerPlugin.h  PluginManager.cpp  PluginManager.h  ScenePlugin.cpp  ScenePlugin.h  SkyBoxPlugin.cpp  SkyBoxPlugin.h  SpritePlugin.cpp  SpritePlugin.h  StartMusicSoundPlugin.h  TerrainPlugin.cpp  TerrainPlugin.h  TextPlugin.cpp  TextPlugin.h  VideoPlugin.cpp  VideoPlugin.h  WalkSoundPlugin.h  YUV420PPlayer.cpp  (+1 more)
engine/engine/app/src/main/cpp/png/: pngtest.c
engine/engine/app/src/main/cpp/shaders/: AppTechnique.cpp  AppTechnique.h  BaseTechnique.cpp  BaseTechnique.h  BasicTechnique.cpp  BasicTechnique.h  GL3Stub.cpp  Math3D.cpp  Technique.cpp  Technique.h  lighting_technique.h
engine/engine/app/src/main/cpp/utils/: AppLog.h  GLError.c  GLError.h  UtilTime.cpp  UtilTime.h  display.cpp  time.cpp
engine/engine/app/src/main/java/com/example/engine/: MainActivity.java
engine/engine/distribution/assimp/include/assimp/: DefaultLogger.hpp
engine/engine/distribution/freeglut/include/: fg_internal.h
engine/engine/distribution/freeglut/include/GL/: freeglut_std.h
engine/engine/distribution/imagemagick/include/MagickCore/: magick-config.h
engine/engine/distribution/png/include/: pngpriv.h
example_app_to_load_assimp/hello-libs/: local.properties
example_app_to_load_assimp/hello-libs/app/: build.gradle
example_app_to_load_assimp/hello-libs/app/src/main/: AndroidManifest.xml
example_app_to_load_assimp/hello-libs/app/src/main/cpp/: CMakeLists.txt  camera.cpp  fg_ext.c  fg_ext_egl.c  fg_internal_android.h  fg_main_android.c  fg_state_android.c  fg_state_egl.c  fg_structure_android.c  gl3stub.cpp  hello-libs.c  magick-baseconfig.h  ogldev_app.cpp  ogldev_app.h  ogldev_camera.h  ogldev_skinned_mesh.cpp  ogldev_skinned_mesh.h  ogldev_texture.cpp  ogldev_util.cpp  skinning_technique.cpp  technique.cpp  technique.h  tutorial38.cpp
example_app_to_load_assimp/hello-libs/app/src/main/cpp/FreeGlut/: fg_cursor_android.c  fg_init.c  fg_state.c
example_app_to_load_assimp/hello-libs/app/src/main/cpp/MagickCore/: magick-type.h  studio.h  version.h
example_app_to_load_assimp/hello-libs/app/src/main/cpp/app/: ogldev_texture.h
example_app_to_load_assimp/hello-libs/app/src/main/cpp/coders/: tiff.c
example_app_to_load_assimp/hello-libs/app/src/main/java/com/example/hellolibs/: MainActivity.java
example_app_to_load_assimp/hello-libs/distribution/imagemagick/include/ImageMagick-6/Magick++/: STL.h
example_app_to_load_assimp/hello-libs/distribution/imagemagick/include/ImageMagick-6/magick/: magick-config.h
existing_git_projs/android-cmake/: android.toolchain.cmake
existing_git_projs/assimp/test/unit/: utDefaultIOStream.cpp  utIOStreamBuffer.cpp
ffmpeg/: build_android.sh  configure
ffmpeg/android/arm/include/libavutil/: ffversion.h
